--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,5 @@
-[package]
-name = "raytracer"
-version = "0.1.0"
-authors = ["aik2mlj <aik2mlj@sjtu.edu.cn>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-image = "0.23"
-indicatif = "0.15"
-rand = "0.5.5"
-threadpool = "1.8"
+[workspace]
+members = [
+    "raytracer",
+    "raytracer_codegen",
+]
